# Task2-Agentics-AI-Repo-01-to-05

agentic-repos-program/: README.md
agentic-repos-program/1-Uv_Initialization_Process/uv_explorer/: main.py  pyproject.toml
agentic-repos-program/1-Uv_Initialization_Process/uv_project2/: pyproject.toml
agentic-repos-program/2-Agents_by_openrouter_openai/openai-gemini-sdk/chatbox/: main.py  pyproject.toml
agentic-repos-program/2-Agents_by_openrouter_openai/openrouter-gemini-sdk/: main.py  pyproject.toml
agentic-repos-program/3-Litellm_openai_agent/1_LLM_Compare_by_litellm/LLM_Insight/: main.py  pyproject.toml
agentic-repos-program/3-Litellm_openai_agent/2_Build_AI_Voice_Assistant/: jarvisAIAssistant.py  pyproject.toml
agentic-repos-program/4-chat-based AI assistant/1_sync_agent/: main.py  pyproject.toml
agentic-repos-program/4-chat-based AI assistant/2_async_agent/async_agent/: README.md  main.py  pyproject.toml
agentic-repos-program/5- Chainlit_conversational_ AI_app_using_Gemini/conversation_agent/: app.py  pyproject.toml
